# blakerypt

./: CMakeLists.txt  main.c
include/: blakerypt.h
src/: blakerypt.c
